# label-swap

./: .gitignore  Cargo.toml  README.md  io.github.diegoivan.label_swap.json  meson.build
bounding-marker/: Cargo.toml
bounding-marker/src/: format_registry.rs  main.rs
labelswap-data/: Cargo.toml
labelswap-data/src/: conversion_pipeline.rs  lib.rs  models.rs  parser.rs  serializer.rs  transforms.rs
labelswap-data/src/models/: annotation.rs  format.rs  image.rs
labelswap-data/src/parser/: cocojson_parser.rs  format_parser.rs  (+5 more)
labelswap-data/tests/: cocojsonparser_test.rs  tfobjectdetection_test.rs  transforms.rs  yolo5obbparser_test.rs  yolo5txtparser_test.rs  yolodarknetparser_test.rs
labelswap-gtk/: Cargo.toml
labelswap-gtk/data/: io.github.diegoivan.label_swap.desktop.in  io.github.diegoivan.label_swap.gschema.xml  io.github.diegoivan.label_swap.metainfo.xml.in  meson.build
labelswap-gtk/data/icons/: meson.build
labelswap-gtk/po/: POTFILES  meson.build
labelswap-gtk/src/: application.rs  label-swap.gresource.xml  main.rs  meson.build  models.rs  widgets.rs  window.rs  window.ui
labelswap-gtk/src/models/: format_object.rs
labelswap-gtk/src/ui/: file-chooser-row.blp  window.blp
labelswap-gtk/src/widgets/: file_chooser_row.rs
labelswitch-data/: Cargo.toml
labelswitch-data/src/: lib.rs
labelswitch-data/tests/: yolo5obbparser_test.rs
src/: parser.rs
src/models/: annotation.rs
src/parser/: format_parser.rs  yolo5obb_parser.rs
tests/: yolo5obbparser_test.rs
tests/common_parser/: mod.rs
tests/yolo5obb-labels/: 001.txt  002.txt
(+16 files in other folders)
