[package]
name = "labelswap-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
labelswap-data = { path = "../labelswap-data" }

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]